tests/compile_fail/invalid_style_source_id_literal.rs
use surgeist_style::StyleSourceId;

fn main() {
    let _source = StyleSourceId { value: 1 };
}
