tests/compile_fail/invalid_style_source_id_literal.stderr
error[E0451]: field `value` of struct `StyleSourceId` is private
 --> tests/compile_fail/invalid_style_source_id_literal.rs:4:35
  |
4 |     let _source = StyleSourceId { value: 1 };
  |                                   ^^^^^ private field
